add game confirmation + reminder
